web version of 3b220de0a19192b105bc90793717f0818fcaffd7 from master

--- a/source_0.html
+++ b/source_0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Open Source Bridge 2012 Participants - Red Herrings — 2 of 5</title>
+  <title>Open Source Bridge 2012 Participants - Red Herrings — 2 of 9</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
@@ -18,7 +18,7 @@
 
 <div class ="sourceintroduction">
 	<h1>
-		<span>Red Herrings</span> <span class="pagination">— 2 of 5</span>
+		<span>Red Herrings</span> <span class="pagination">— 2 of 9</span>
 	</h1>
 	<h2>
 		<span>Open Source Bridge 2012 Participants</span>
@@ -35,7 +35,7 @@
 </div>
 
 <div class = "source">
-<p class="indent0"><span class="heading">Chapter - Rooms</span></p><p class="indent0"></p><p class="indent0"><span class="heading">Section - Deli</span></p><p class="indent0"></p><p class="indent0">The Deli is north of the Strip Mall. &quot;<span class="quote">A warm and inviting deli / bakery stretches around you. The entrance is to the south.</span>&quot; Understand &quot;<span class="quote">bakery</span>&quot; as the Deli.</p><p class="indent0"></p><p class="indent0">The red potato herring salad is in the display case. &quot;<span class="quote">This red potato herring salad looks pretty tasty.</span>&quot;</p><p class="indent0"></p><p class="indent0">The display case is a fixed in place open unopenable container in the Deli. &quot;<span class="quote">This display case is full of tasty treats.</span>&quot;</p><p class="indent0"></p><p class="indent0">The eel pie is a solution piece in the display case. The description is &quot;<span class="quote">Mmm. Tasty eel pie.</span>&quot;</p><p class="indent0"></p><p class="indent0">The maple bar is in the display case. &quot;<span class="quote">This maple bar looks tasty. It has some kind of cream filling.</span>&quot; The red cream filling is part of the maple bar. &quot;<span class="quote">This filling has a reddish tinge. You take a taste. Uggh! Fishy!</span>&quot;</p><p class="indent0"></p><p class="indent0">A grill pan is in the Deli. &quot;<span class="quote">A pan here looks perfect for grilling almost anything grillable.</span>&quot; The description is &quot;<span class="quote">It has red stains, and a herringbone pattern.</span>&quot;</p><p class="indent0"></p><p class="indent0">A box of napkins is an open unopenable container in the Deli. &quot;<span class="quote">A generic white box contains some napkins. No manufacturer's mark is immediately visible.</span>&quot; The napkin box bottom is part of the box of napkins. The description of the napkin box bottom is &quot;<span class="quote">These napkins appear to be manufactured by Rehdairuhng Enterprises.</span>&quot; Understand &quot;<span class="quote">box bottom</span>&quot; or &quot;<span class="quote">bottom of box</span>&quot; as the napkin box bottom. A paper napkin is a kind of thing. The description of a paper napkin is usually &quot;<span class="quote">This is a generic white napkin. Nothing obviously fishy about it.</span>&quot;. 20 paper napkins are in the box of napkins.</p><p class="indent0"></p>
+<p class="indent0"><span class="heading">Section - Strip Mall</span></p><p class="indent0"></p><p class="indent0">The Strip Mall is a room. &quot;<span class="quote">This dingy strip mall has but a few shops. There is a deli / bakery to the north, a fish shop to the south, an antique shop to the northwest, and a memorabilia store to the southwest.</span>&quot;</p><p class="indent0"></p><p class="indent0">A thing can be a red herring. A thing is usually a red herring.</p><p class="indent0"></p><p class="indent0">A solution piece is a kind of thing. A solution piece is not a red herring.</p><p class="indent0"></p><p class="indent0">The tiny red fish is in the Strip Mall. &quot;<span class="quote">A tiny red fish is lying on the street.</span>&quot; The description is &quot;<span class="quote">An obvious red herring.</span>&quot;</p><p class="indent0"></p>
 </div>
 
 <div class ="notes">
