--- a/source_3.html
+++ b/source_3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Open Source Bridge 2012 Participants - Red Herrings — 5 of 5</title>
+  <title>Open Source Bridge 2012 Participants - Red Herrings — 5 of 9</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
@@ -18,7 +18,7 @@
 
 <div class ="sourceintroduction">
 	<h1>
-		<span>Red Herrings</span> <span class="pagination">— 5 of 5</span>
+		<span>Red Herrings</span> <span class="pagination">— 5 of 9</span>
 	</h1>
 	<h2>
 		<span>Open Source Bridge 2012 Participants</span>
@@ -30,12 +30,12 @@
 
 <div class = "links">
 <ul>
-<li><a href="index.html">Home page</a></li><li><a href="source.html">Beginning</a></li><li><a href="source_2.html">Previous</a></li>
+<li><a href="index.html">Home page</a></li><li><a href="source.html">Beginning</a></li><li><a href="source_2.html">Previous</a></li><li><a href="source_4.html">Next</a></li>
 </ul>
 </div>
 
 <div class = "source">
-<p class="indent0"><span class="heading">Section - Fish Shop</span></p><p class="indent0"></p><p class="indent0">    The Fish Shop is south of the Strip Mall. &quot;<span class="quote">A small, poorly-lit shop surrounds you. It looks more like a hole in the wall than a legitimate establishment. It smells fishy. The entrance is to the north.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The Freezer is in the shop. The freezer is closed. The freezer is openable. The description of the freezer is &quot;<span class="quote">An ancient and eldritch freezer case. Encrusted in ice, you wonder what secrets it might hold.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The Swedish Fish are in the freezer. The description of the Swedish Fish is &quot;<span class="quote">You never did understand why they were called 'Swedish Fish.' They're neither Swedish nor fish, as far as you know.</span>&quot; Understand &quot;<span class="quote">candy</span>&quot; as the Swedish Fish.</p><p class="indent0">     </p><p class="indent0">    The Canadian fish is in the freezer. The description of the Canadian fish is &quot;<span class="quote">A herring impaled bloodily on a stick. A traditional snack of Canadians.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The fish shop shelf is in the fish shop. The description of the shelf is &quot;<span class="quote">A dusty shelf.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The rose vase is on the fish shop shelf.  The description is &quot;<span class="quote">A rose-colored glass vase.</span>&quot; The vase bottom is part of the rose vase. The description of the vase bottom is &quot;<span class="quote">A herring is inscribed on the bottom of the vase.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The Crimson Fish Key is a thing. The key unlocks the counter.</p><p class="indent0">     </p><p class="indent0">    The Counter is in the shop. The counter is closed. The counter is openable. The counter is locked. The counter can be locked or unlocked. The description of the counter is &quot;<span class="quote">A traditional glass counter case. You can see fish, raw and prepared, inside, beyond a veil of precipitation.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The salmon sushi is a solution piece in the counter. The description of the sushi is &quot;<span class="quote">Sushi. Yummy sushi. Sticky, sticky, yummy sushi.</span>&quot;</p><p class="indent0">     </p><p class="indent0">    The herringbone quilt is on the shelf. The description of the quilt is &quot;<span class="quote">A patchwork of pale pink fabric and herringbone.</span>&quot; Carry out examining the quilt: say &quot;<span class="quote">Upon further examination, you spy a key hiding underneath the quilt.</span>&quot;; now the key is on the shelf.</p><p class="indent0"></p><p class="indent0"></p>
+<p class="indent0"><span class="heading">Section - Testing</span></p><p class="indent0"></p><p class="indent0">Test me with &quot;<span class="quote">take all / turn on device / test fish-shop / test deli / test antique-shop / test memorabilia-shop / put sushi on tray 1 / put anchor on tray 2 / put pamphlet on tray 3 / put pie on tray 4 / put fish on tray 3 / turn on device / get fish / turn on device</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test fish-shop with &quot;<span class="quote">s / x quilt / get key / unlock counter with key / open counter / get sushi / drop key / n</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test deli with &quot;<span class="quote">n / get eel pie / s</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test antique-shop with &quot;<span class="quote">nw / get anchor / se</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test memorabilia-store with &quot;<span class="quote">sw / open frame / get pamphlet / ne</span>&quot;.</p><p class="indent0"></p>
 </div>
 
 <div class ="notes">
