--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 </div>
 <div class="links">
 	<ul>
-	<li><div class="download"><a href="Red Herrings.zblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;203KB)</span></div></li>
-	<div class="auxiliary"><li><a href="source.html">Source Text</a> <span class="filetype">(link)</span></li></div>
+	<li><div class="download"><a href="Red Herrings.zblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;205KB)</span></div></li>
+	<div class="auxiliary"><li><a href="source.html">Source Text</a> <span class="filetype">(link)</span></li><li><a href="play.html">Play In-Browser</a> <span class="filetype">(link)</span></li></div>
 	</ul>
 </div>
 
 <div class="about"><span><p>A work of interactive fiction.</p></span></div>
 
 <div class="playinfo">
-	<p>Red Herrings was created with <a href="http://inform7.com/">Inform</a> and has IFID 98F1CF16-C21C-11E1-B443-00166F58FFA0. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://www.logicalshift.demon.co.uk/mac/zoom.html">Zoom
-for Mac OS X</a> and for <a href="http://www.logicalshift.demon.co.uk/unix/zoom/">Unix</a>; <a href="http://freespace.virgin.net/davidk.kinder/frotz.html">Windows Frotz</a> or <a href="http://freespace.virgin.net/davidk.kinder/glulxe.html">Windows Glulxe</a> for Windows. </p>
+	<p>Red Herrings was created with <a href="http://inform7.com/">Inform</a> and has IFID 48319EF6-C17E-11E1-A5CE-AA0004000A04. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://www.logicalshift.demon.co.uk/mac/zoom.html">Zoom
+for Mac OS X</a> and for <a href="http://www.logicalshift.demon.co.uk/unix/zoom/">Unix</a>; <a href="http://freespace.virgin.net/davidk.kinder/frotz.html">Windows Frotz</a> or <a href="http://freespace.virgin.net/davidk.kinder/glulxe.html">Windows Glulxe</a> for Windows. 
+Or you can play without downloading anything by following the 'Play In-Browser'
+link, using the Parchment interpreter. You'll need to have Javascript enabled
+on your web browser.</p>
 </div> 
 
 </div>
