web version of 4d45db40e01afe37e5352b99e4239d05f26c8d49 from master

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-</head>
+ </head>
 <body>
 <div class="container">
-<div class="coverimage"><span><a href="Cover.png"><img src="Small Cover.png" border="1" /></a></span></div>
+<div class="coverimage"><span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span></div>
 <div class="introduction">
 	<h1><span>Red Herrings</span></h1>
 	<h2><span>Open Source Bridge 2012 Participants</span></h2>
@@ -17,7 +17,7 @@
 </div>
 <div class="links">
 	<ul>
-	<li><div class="download"><a href="Red Herrings.zblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;257KB)</span></div></li>
+	<li><div class="download"><a href="Red Herrings.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;591KB)</span></div></li>
 	<div class="auxiliary"><li><a href="source.html">Source Text</a> <span class="filetype">(link)</span></li><li><a href="play.html">Play In-Browser</a> <span class="filetype">(link)</span></li></div>
 	</ul>
 </div>
@@ -25,10 +25,10 @@
 <div class="about"><span><p>A work of interactive fiction.</p></span></div>
 
 <div class="playinfo">
-	<p>Red Herrings was created with <a href="http://inform7.com/">Inform</a> and has IFID 9F3EBD66-0CB3-11E2-BFC4-001CC06F97E5. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://www.logicalshift.demon.co.uk/mac/zoom.html">Zoom
-for Mac OS X</a> and for <a href="http://www.logicalshift.demon.co.uk/unix/zoom/">Unix</a>; <a href="http://freespace.virgin.net/davidk.kinder/frotz.html">Windows Frotz</a> or <a href="http://freespace.virgin.net/davidk.kinder/glulxe.html">Windows Glulxe</a> for Windows. 
+	<p>Red Herrings was created with <a href="http://inform7.com/">Inform</a> and has IFID 92D5C3F0-B389-11E5-BC88-94DE80774D68. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://www.logicalshift.demon.co.uk/mac/zoom.html">Zoom
+for Mac OS X</a> and for <a href="http://www.logicalshift.demon.co.uk/unix/zoom/">Unix</a>; <a href="http://freespace.virgin.net/davidk.kinder/frotz.html">Windows Frotz</a> or <a href="http://freespace.virgin.net/davidk.kinder/glulxe.html">Windows Glulxe</a> for Windows.  
 Or you can play without downloading anything by following the 'Play In-Browser'
-link, using the Parchment interpreter. You'll need to have Javascript enabled
+link, using the Quixe interpreter. You'll need to have Javascript enabled
 on your web browser.</p>
 </div> 
 
