--- a/source_0.html
+++ b/source_0.html
@@ -6,14 +6,14 @@
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-</head>
+ </head>
 
 <body>
 
 <div class = "container">
 
 <div class ="sourcecoverimage">
-	<span><a href="Cover.png"><img src="Small Cover.png" border="1" /></a></span>
+	<span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span>
 </div>
 
 <div class ="sourceintroduction">
@@ -35,7 +35,7 @@
 </div>
 
 <div class = "source">
-<p class="indent0"><span class="heading">Section - Strip Mall</span></p><p class="indent0"></p><p class="indent0">The Strip Mall is a room. &quot;<span class="quote">This dingy strip mall has but a few shops. There is a deli / bakery to the north, a fish shop to the south, an antique shop to the northwest, and a memorabilia store to the southwest.</span>&quot;</p><p class="indent0"></p><p class="indent0">A thing can be a red herring. A thing is usually a red herring.</p><p class="indent0"></p><p class="indent0">A solution piece is a kind of thing. A solution piece is not a red herring.</p><p class="indent0"></p><p class="indent0">The tiny red fish is in the Strip Mall. &quot;<span class="quote">A tiny red fish is lying on the street.</span>&quot; The description is &quot;<span class="quote">An obvious red herring.</span>&quot;</p><p class="indent0"></p>
+<p class="indent0"><span class="heading">Section - Strip Mall</span></p><p class="indent0">The Strip Mall is a room. &quot;<span class="quote">This dingy strip mall has but a few shops. There is a deli / bakery to the north, a fish shop to the south, an antique shop to the northwest, and a memorabilia store to the southwest.</span>&quot;</p><p class="indent0">A thing can be a red herring. A thing is usually a red herring.</p><p class="indent0">A solution piece is a kind of thing. A solution piece is not a red herring.</p><p class="indent0">The tiny red fish is in the Strip Mall. &quot;<span class="quote">A tiny red fish is lying on the street.</span>&quot; The description is &quot;<span class="quote">An obvious red herring.</span>&quot;</p>
 </div>
 
 <div class ="notes">
