--- a/source_2.html
+++ b/source_2.html
@@ -6,14 +6,14 @@
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-</head>
+ </head>
 
 <body>
 
 <div class = "container">
 
 <div class ="sourcecoverimage">
-	<span><a href="Cover.png"><img src="Small Cover.png" border="1" /></a></span>
+	<span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span>
 </div>
 
 <div class ="sourceintroduction">
@@ -35,7 +35,7 @@
 </div>
 
 <div class = "source">
-<p class="indent0"><span class="heading">Section - Food</span></p><p class="indent0"></p><p class="indent0">Food is a kind of thing. Food is usually edible. Food can be vile. It is usually not vile. Instead of eating something edible: if the noun is vile, say &quot;<span class="quote">That really doesn't look tasty. Really. Seriously? Look more closely. Uggh.</span>&quot;; otherwise say &quot;<span class="quote">You aren't that hungry, and you're not that sure you're not eating something important. Besides, virus scare, remember? You pass.</span>&quot;</p><p class="indent0"></p>
+<p class="indent0"><span class="heading">Section - Food</span></p><p class="indent0">Food is a kind of thing. Food is usually edible. Food can be vile. It is usually not vile. Instead of eating something edible: if the noun is vile, say &quot;<span class="quote">That really doesn't look tasty. Really. Seriously? Look more closely. Uggh.</span>&quot;; otherwise say &quot;<span class="quote">You aren't that hungry, and you're not that sure you're not eating something important. Besides, virus scare, remember? You pass.</span>&quot;</p>
 </div>
 
 <div class ="notes">
