--- a/play.html
+++ b/play.html
@@ -7,22 +7,26 @@
   <meta name="author" content="Open Source Bridge 2012 Participants">
   <link rel="stylesheet" href="style.css">
   
-  <script src="interpreter/jquery.min.js" defer></script>
-<script src="interpreter/parchment.min.js" defer></script>
-<link rel="stylesheet" type="text/css" href="interpreter/parchment.css">
-<script>
-parchment_options = {
-default_story: [ "Red Herrings.zblorb", "interpreter/Red Herrings.zblorb.js" ],
-lib_path: 'interpreter/',
-lock_story: 1,
-page_title: 0
+  <link rel="stylesheet" href="interpreter/glkote.css" type="text/css">
+<link rel="stylesheet" href="interpreter/dialog.css" type="text/css">
+<script src="interpreter/glkote.min.js" type="text/javascript"></script>
+<script src="interpreter/quixe.min.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+game_options = {
+use_query_story: false,
+set_page_title: false,
+inspacing: 0,     // gap between windows
+outspacing: 0     // gap between windows and edge of gameport
 };
 </script>
+
+<script src="interpreter/Red Herrings.gblorb.js" type="text/javascript"></script>
   
-</head>
+ </head>
 <body class="play">
 <div class="container">
-<div class="coverimage"><span><a href="Cover.png"><img src="Small Cover.png" border="1" /></a></span></div>
+<div class="coverimage"><span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span></div>
 <div class="links">
 <div class="smalltitle">Red Herrings</div>
 <ul>
@@ -31,16 +35,25 @@ page_title: 0
 </div>
 
 <div id="gameport">
-<div id="about">
-<h1>Parchment</h1>
-<p>is an interpreter for Interactive Fiction. <a href="http://parchment.googlecode.com">Find out more.</a></p>
-<noscript><p>Parchment requires Javascript. Please enable it in your browser.</p></noscript>
+<div id="windowport">
+<noscript><hr>
+<p>You'll need to turn on Javascript in your web browser to play this game.</p>
+<hr></noscript>
 </div>
-<div id="parchment"></div>
+<div id="loadingpane">
+<img src="interpreter/waiting.gif" alt="LOADING"><br>
+<em>&nbsp;&nbsp;&nbsp;Loading...</em>
+</div>
+<div id="errorpane" style="display:none;"><div id="errorcontent">...</div></div>
+<div id="layouttestpane">
+This should not be visible
+<div id="layouttest_grid" class="WindowFrame GridWindow"><div id="layouttest_gridline" class="GridLine"><span id="layouttest_gridspan" class="Style_normal">12345678</span></div><div id="layouttest_gridline2" class="GridLine"><span class="Style_normal">12345678</span></div></div>
+<div id="layouttest_buffer" class="WindowFrame BufferWindow"><div id="layouttest_bufferline" class="BufferLine"><span id="layouttest_bufferspan" class="Style_normal">12345678</span></div><div id="layouttest_bufferline2" class="BufferLine"><span class="Style_normal">12345678</span></div></div>
+</div>
 </div>
 
 </div>
-<div class="interpretercredit"><a href="http://parchment.googlecode.com">Parchment for Inform 7 (2010-10-18)</a></div>
+<div class="interpretercredit"><a href="http://eblong.com/zarf/glulx/quixe/">Quixe for Inform 7 (v. 1.3.1)</a></div>
 </body>
 </html>
 
