--- a/source.html
+++ b/source.html
@@ -6,14 +6,14 @@
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-</head>
+ </head>
 
 <body>
 
 <div class = "container">
 
 <div class ="sourcecoverimage">
-	<span><a href="Cover.png"><img src="Small Cover.png" border="1" /></a></span>
+	<span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span>
 </div>
 
 <div class ="sourceintroduction">
@@ -35,15 +35,15 @@
 </div>
 
 <div class = "source">
-<p class="indent0"><span class="heading">&quot;<span class="quote">Red Herrings</span>&quot; by &quot;<span class="quote">Open Source Bridge 2012 Participants</span>&quot;</span></p><p class="indent0"></p><p class="indent0"><span class="comment">[ Copyright © 2012 Bart Massey and participants in the Open Source Bridge 2012 Inform 7 authoring session. ]</span></p><p class="indent0"><span class="comment">[ Released under the Creative Commons Attribution 3.0 United States license: http://creativecommons.org/licenses/by/3.0/us/ ]</span></p><p class="indent0"><span class="comment">[ With apologies to the late Dorothy Sayers, whose 'Five Red Herrings' I am currently reading. ]</span></p><p class="indent0"></p><p class="indent0">When play begins: say &quot;<span class="quote">The panic over the supposed virus was sheer mass hysteria, but it was sufficient to clear out the Middletown Strip Mall. After a day or so, you venture into the mall to see what you can find of interest...</span>&quot;</p><p class="indent0"></p><p class="indent0">The story headline is &quot;<span class="quote">A Treasure Hunt Puzzle</span>&quot;.</p><p class="indent0"></p><p class="indent0">Release along with the library card, an interpreter, cover art and the source text.</p><p class="indent0"></p><p class="indent0">Use no scoring.</p><ul><ul><li><a href=source_0.html>Section - Strip Mall</a></li>
-<li><a href=source_1.html>Section - Judging Device</a></li>
-<li><a href=source_2.html>Section - Food</a></li>
-<li><a href=source_3.html>Section - Testing</a></li>
-</ul><li><a href=source_4.html>Chapter - Rooms</a></li>
-<ul><li><a href=source_4.html>Section - Deli</a></li>
-<li><a href=source_5.html>Section - Antique Shop</a></li>
-<li><a href=source_6.html>Section - Memorabilia Store</a></li>
-<li><a href=source_7.html>Section - Fish Shop</a></li>
+<p class="indent0"><span class="heading">&quot;<span class="quote">Red Herrings</span>&quot; by &quot;<span class="quote">Open Source Bridge 2012 Participants</span>&quot;</span></p><p class="indent0"><span class="comment">[ Copyright © 2012 Bart Massey and participants in the Open Source Bridge 2012 Inform 7 authoring session. ]</span></p><p class="indent0"><span class="comment">[ Released under the Creative Commons Attribution 3.0 United States license: http://creativecommons.org/licenses/by/3.0/us/ ]</span></p><p class="indent0"><span class="comment">[ With apologies to the late Dorothy Sayers, whose 'Five Red Herrings' I am currently reading. ]</span></p><p class="indent0">When play begins: say &quot;<span class="quote">The panic over the supposed virus was sheer mass hysteria, but it was sufficient to clear out the Middletown Strip Mall. After a day or so, you venture into the mall to see what you can find of interest...</span>&quot;</p><p class="indent0">The story headline is &quot;<span class="quote">A Treasure Hunt Puzzle</span>&quot;.</p><p class="indent0">Release along with the library card, an interpreter, cover art and the source text.</p><p class="indent0">Use no scoring.</p><ul><ul><li><a href="source_0.html">Section - Strip Mall</a></li>
+<li><a href="source_1.html">Section - Judging Device</a></li>
+<li><a href="source_2.html">Section - Food</a></li>
+<li><a href="source_3.html">Section - Testing</a></li>
+</ul><li><a href="source_4.html">Chapter - Rooms</a></li>
+<ul><li><a href="source_4.html">Section - Deli</a></li>
+<li><a href="source_5.html">Section - Antique Shop</a></li>
+<li><a href="source_6.html">Section - Memorabilia Store</a></li>
+<li><a href="source_7.html">Section - Fish Shop</a></li>
 </ul></ul>
 </div>
 
