--- a/source_3.html
+++ b/source_3.html
@@ -6,14 +6,14 @@
   <meta name="author" content="Open Source Bridge 2012 Participants" />
   <meta name="description" content="A page for the game Red Herrings by Open Source Bridge 2012 Participants." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-</head>
+ </head>
 
 <body>
 
 <div class = "container">
 
 <div class ="sourcecoverimage">
-	<span><a href="Cover.png"><img src="Small Cover.png" border="1" /></a></span>
+	<span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span>
 </div>
 
 <div class ="sourceintroduction">
@@ -35,7 +35,7 @@
 </div>
 
 <div class = "source">
-<p class="indent0"><span class="heading">Section - Testing</span></p><p class="indent0"></p><p class="indent0">Test me with &quot;<span class="quote">take all / turn on device / test fish-shop / test deli / test antique-shop / test memorabilia-shop / test load-slea / put fish on tray 3 / turn on device / get fish / turn on device / take all / test load-ales / turn on device / take all / test load-sale / turn on device</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test load-sale with &quot;<span class="quote">put sushi on tray 1 / put anchor on tray 2 / put pamphlet on tray 3 / put pie on tray 4</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test load-ales with &quot;<span class="quote">put sushi on tray 4 / put anchor on tray 1 / put pamphlet on tray 2 / put pie on tray 3</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test load-slea with &quot;<span class="quote">put sushi on tray 1 / put anchor on tray 4 / put pamphlet on tray 2 / put pie on tray 3</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test fish-shop with &quot;<span class="quote">s / x quilt / get key / open counter / get sushi / drop key / n</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test deli with &quot;<span class="quote">n / get eel pie / s</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test antique-shop with &quot;<span class="quote">nw / get anchor / se</span>&quot;.</p><p class="indent0"></p><p class="indent0">Test memorabilia-store with &quot;<span class="quote">sw / open frame / get pamphlet / ne</span>&quot;.</p><p class="indent0"></p>
+<p class="indent0"><span class="heading">Section - Testing</span></p><p class="indent0">Test me with &quot;<span class="quote">take all / turn on device / test fish-shop / test deli / test antique-shop / test memorabilia-shop / test load-slea / put fish on tray 3 / turn on device / get fish / turn on device / take all / test load-ales / turn on device / take all / test load-sale / turn on device</span>&quot;.</p><p class="indent0">Test load-sale with &quot;<span class="quote">put sushi on tray 1 / put anchor on tray 2 / put pamphlet on tray 3 / put pie on tray 4</span>&quot;.</p><p class="indent0">Test load-ales with &quot;<span class="quote">put sushi on tray 4 / put anchor on tray 1 / put pamphlet on tray 2 / put pie on tray 3</span>&quot;.</p><p class="indent0">Test load-slea with &quot;<span class="quote">put sushi on tray 1 / put anchor on tray 4 / put pamphlet on tray 2 / put pie on tray 3</span>&quot;.</p><p class="indent0">Test fish-shop with &quot;<span class="quote">s / x quilt / get key / open counter / get sushi / drop key / n</span>&quot;.</p><p class="indent0">Test deli with &quot;<span class="quote">n / get eel pie / s</span>&quot;.</p><p class="indent0">Test antique-shop with &quot;<span class="quote">nw / get anchor / se</span>&quot;.</p><p class="indent0">Test memorabilia-store with &quot;<span class="quote">sw / open frame / get pamphlet / ne</span>&quot;.</p>
 </div>
 
 <div class ="notes">
