--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="links">
 	<ul>
-	<li><div class="download"><a href="Red Herrings.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;591KB)</span></div></li>
+	<li><div class="download"><a href="Red Herrings.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;581KB)</span></div></li>
 	<div class="auxiliary"><li><a href="source.html">Source Text</a> <span class="filetype">(link)</span></li><li><a href="play.html">Play In-Browser</a> <span class="filetype">(link)</span></li></div>
 	</ul>
 </div>
@@ -25,12 +25,17 @@
 <div class="about"><span><p>A work of interactive fiction.</p></span></div>
 
 <div class="playinfo">
-	<p>Red Herrings was created with <a href="http://inform7.com/">Inform</a> and has IFID 92D5C3F0-B389-11E5-BC88-94DE80774D68. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://www.logicalshift.demon.co.uk/mac/zoom.html">Zoom
-for Mac OS X</a> and for <a href="http://www.logicalshift.demon.co.uk/unix/zoom/">Unix</a>; <a href="http://freespace.virgin.net/davidk.kinder/frotz.html">Windows Frotz</a> or <a href="http://freespace.virgin.net/davidk.kinder/glulxe.html">Windows Glulxe</a> for Windows.  
+	<p>Red Herrings was created with <a href="http://inform7.com/">Inform</a> and has IFID CF948F5F-8D66-4D09-AAD6-A29FA9B91E81.
+	To play a work like this one, you need an interpreter program: many are available,
+	among them <a href="http://ccxvii.net/gargoyle/">Gargoyle for MacOS, Linux or Windows</a>;
+	<a href="https://github.com/angstsmurf/spatterlight/releases">Spatterlight for MacOS</a>;
+	<a href="http://davidkinder.co.uk/frotz.html">Windows Frotz</a> or 
+	<a href="http://davidkinder.co.uk/glulxe.html">Windows Glulxe</a> for Windows.
+	 
 Or you can play without downloading anything by following the 'Play In-Browser'
 link, using the Quixe interpreter. You'll need to have Javascript enabled
 on your web browser.</p>
-</div> 
+</div>
 
 </div>
 </body>
