--- a/play.html
+++ b/play.html
@@ -9,12 +9,17 @@
   
   <link rel="stylesheet" href="interpreter/glkote.css" type="text/css">
 <link rel="stylesheet" href="interpreter/dialog.css" type="text/css">
+<script src="interpreter/jquery-1.12.4.min.js" type="text/javascript"></script>
 <script src="interpreter/glkote.min.js" type="text/javascript"></script>
 <script src="interpreter/quixe.min.js" type="text/javascript"></script>
 
+<script src="interpreter/resourcemap.js" type="text/javascript"></script>
+
 <script type="text/javascript">
 game_options = {
+image_info_map: 'StaticImageInfo',  // image data is here, not in blorb
 use_query_story: false,
+log_execution_time: true,
 set_page_title: false,
 inspacing: 0,     // gap between windows
 outspacing: 0     // gap between windows and edge of gameport
@@ -45,15 +50,10 @@ outspacing: 0     // gap between windows and edge of gameport
 <em>&nbsp;&nbsp;&nbsp;Loading...</em>
 </div>
 <div id="errorpane" style="display:none;"><div id="errorcontent">...</div></div>
-<div id="layouttestpane">
-This should not be visible
-<div id="layouttest_grid" class="WindowFrame GridWindow"><div id="layouttest_gridline" class="GridLine"><span id="layouttest_gridspan" class="Style_normal">12345678</span></div><div id="layouttest_gridline2" class="GridLine"><span class="Style_normal">12345678</span></div></div>
-<div id="layouttest_buffer" class="WindowFrame BufferWindow"><div id="layouttest_bufferline" class="BufferLine"><span id="layouttest_bufferspan" class="Style_normal">12345678</span></div><div id="layouttest_bufferline2" class="BufferLine"><span class="Style_normal">12345678</span></div></div>
-</div>
 </div>
 
 </div>
-<div class="interpretercredit"><a href="http://eblong.com/zarf/glulx/quixe/">Quixe for Inform 7 (v. 1.3.1)</a></div>
+<div class="interpretercredit"><a href="http://eblong.com/zarf/glulx/quixe/">Quixe for Inform 7 (v. 2.2.1)</a></div>
 </body>
 </html>
 
